# pyscript

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pyscript/: __main__.py
pyscript/commands/: add.py  clean.py  download.py  list.py  remove.py  run.py  update.py
pyscript/core/: manager.py  metadata_manager.py  script_manager.py  venv_manager.py
pyscript/default_scripts/: hello.json
pyscript/utils/: console.py  error.py  file.py  github.py  parser.py
